# multi-agent-dev-studio

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/prompts/: code_prompt.txt  review_prompt.txt  spec_prompt.txt  spec_review_prompt.txt  synthesis_prompt.txt
docs/: HowItWorks.html  Infrastructure.md  SPEC-orchestration.md  Setup.md  TECH-DESIGN-multi-agent-dev-studio.md
src/: app.py  main.py  pipeline.py
src/agents/: __init__.py  base.py  code_agent.py  fix_dispatch.py  orchestrate.py  review.py  spec_agent.py  spec_review.py  synthesize.py
src/config/: __init__.py  constants.py  logging.py  settings.py
src/graph/: __init__.py  graph.py
src/state/: __init__.py  models.py  state.py
tests/: test_agents.py  test_config.py  test_gradio_ui.py  test_graph_smoke.py  test_integration.py  test_review_loop.py  test_state.py
